volumes/rabbitmq/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: rabbitmq
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: rmq-admin.conv-app.party-e.ru
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 15672
            pathType: Prefix
            path: /
